--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="refresh" content="0; url=http://example.com">
         <script type="text/javascript">
-            window.location.href = "https://blog.hostingstudio.in"
+            window.location.href = "https://blog.sumitjoshi.in"
         </script>
         <title>Page Redirection</title>
     </head>
