--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">Offerings</h2>
-                            <p>We offer App development | Web development | Hosting services | Cloud consulting services, all under one hood</p>
+                            <p>We offer App development | Web development | Web Hosting | Cloud consulting services, all under one hood</p>
                             <p>One stop for all your development needs.</p>
                         </div>
                     </div>
